K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api-service
  namespace: clients-api
spec:
  selector:
    app: clients-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
