K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-api-ingress
  namespace: clients-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - clients.api.deltacapita.com
      secretName: clients-api-tls
  rules:
    - host: clients.api.deltacapita.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clients-api-service
                port:
                  number: 80
